# flet-pro-image-editor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ipa-build.yml
examples/flet_pro_image_editor_example/: pyproject.toml
examples/flet_pro_image_editor_example/src/: main.py
src/flet_pro_image_editor/: __init__.py  editor_configs.py  flet_image_gallery_saver.py  flet_pro_image_editor.py  flet_shimmer.py  flet_syncfusion_slider.py
src/flutter/flet_pro_image_editor/: README.md  pubspec.yaml
src/flutter/flet_pro_image_editor/lib/: flet_pro_image_editor.dart
src/flutter/flet_pro_image_editor/lib/models/: aspect_ratio_item.dart  blur_editor_configs.dart  blur_editor_icons.dart  blur_editor_style.dart  blur_editor_widgets.dart  category_emoji.dart  censor_configs.dart  crop_rotate_editor_configs.dart  crop_rotate_editor_icons.dart  crop_rotate_editor_style.dart  crop_rotate_editor_widgets.dart  dialog_configs.dart  dialog_style.dart  dialog_widgets.dart  editor_safe_area.dart  emoji_editor_configs.dart  emoji_editor_icons.dart  emoji_editor_style.dart  filter_editor_configs.dart  filter_editor_icons.dart  filter_editor_style.dart  filter_editor_widgets.dart  filter_model.dart  helper_line_configs.dart  helper_line_style.dart  image_generation_configs.dart  import_state_history.dart  layer_interaction_configs.dart  layer_interaction_icons.dart  layer_interaction_style.dart  layer_interaction_widgets.dart  main_editor_configs.dart  main_editor_icons.dart  main_editor_style.dart  main_editor_transform_setup.dart  main_editor_widgets.dart  (+20 more)
(+19 files in other folders)
