[project]
name = "flet-pro-image-editor"
version = "0.1.0"
description = "FletProImageEditor control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.28.2",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-pro-image-editor"
Repository = "https://github.com/MyGithubAccount/flet-pro-image-editor"
Issues = "https://github.com/MyGithubAccount/flet-pro-image-editor/issues"

[tool.setuptools.package-data]
"flutter.flet_pro_image_editor" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
